[package]
name = "dyncall"
version = "0.1.0"
authors = ["Birk Tjelmeland <birktjelmeland@yahoo.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.5"
cranelift = "0.59"
cranelift-module = "0.59"
cranelift-simplejit = "0.59"
target-lexicon = "0.10"
